--- a/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
+++ b/AdminPortal/src/app/user-management/dynamicpagelist/dynamicpagelist.component.html
@@ -11,13 +11,13 @@
                         <mat-tab-group #tabGroup mat-stretch-tabs="false" mat-align-tabs="start"
                             (selectedTabChange)="tabChanged($event)">
                             <mat-tab class="tab-border" label="Blogs">
-                                <div *ngIf="blogPageList != null && blogPageList != undefined"
+                                <div *ngIf="currentTab > -1 && currentTab == 0 && blogPageList != null && blogPageList != undefined"
                                     class="card-content table-responsive table-mobile">
                                     <div class="record-count-section">
                                         <label>
                                             Search:
                                             <input type="text" (input)="applyFilter('blogs')"
-                                                [(ngModel)]="searchPageNameQuery" />
+                                                [(ngModel)]="searchBlogPageNameQuery" />
                                             <button class="refresh-btn" (click)="onReset('blogs')"><i
                                                     class="fa fa-refresh refresh-icon-clr"
                                                     aria-hidden="true"></i></button>
@@ -26,17 +26,16 @@
                                     <table class="table table-striped table-bordered custom-table">
                                         <thead class="text-info">
                                             <tr>
-                                                <th style="width: 10%;">Title </th>
+                                                <th style="width: 20%;">Title </th>
                                                 <th style="width: 40%;">Description</th>
-                                                <th style="width: 30%;">Posted Date</th>
+                                                <th style="width: 10%;">Posted Date</th>
                                                 <th style="width: 5%;">Active</th>
                                                 <th style="width: 15%;">URL</th>
-                                                <th style="text-align: center;">Action</th>
+                                                <th style="width: 10%;"style="text-align: center;">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr
-                                                *ngFor="let mails of blogPageList | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
+                                            <tr *ngFor="let mails of blogPageList | paginate : { itemsPerPage:50, currentPage:page,totalItems:totalPage, id:'first' }">
                                                 <td>{{mails.PageTitle}}</td>
                                                 <td>{{mails.PageDescription}}</td>
                                                 <td>{{mails.CreatedDate | date:'dd-MM-yyyy' }}</td>
@@ -65,12 +64,12 @@
                                 </div>
                             </mat-tab>
                             <mat-tab class="tab-border" label="Info">
-                                <div *ngIf="infoPageList != null && infoPageList != undefined">
+                                <div *ngIf="currentTab > -1 && currentTab == 1 && infoPageList != null && infoPageList != undefined">
                                     <div class="record-count-section">
                                         <label>
                                             Search:
                                             <input type="text" (input)="applyFilter('info')"
-                                                [(ngModel)]="searchPageNameQuery" />
+                                                [(ngModel)]="searchinfoPageNameQuery" />
                                             <button class="refresh-btn" (click)="onReset('info')"><i
                                                     class="fa fa-refresh refresh-icon-clr"
                                                     aria-hidden="true"></i></button>
@@ -88,7 +87,7 @@
                                         </thead>
                                         <tbody>
                                             <tr
-                                                *ngFor="let mails of infoPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
+                                                *ngFor="let mails of infoPageList  | paginate : { itemsPerPage:50, currentPage:page,totalItems:totalInfoPages, id:'first' }">
                                                 <td data-title="Subject">{{mails.PageTitle}}</td>
                                                 <td data-title="Subject">{{mails.PageDescription}}</td>
                                                 <td data-title="Subject">{{mails.IsActive}}</td>
@@ -116,12 +115,12 @@
                                 </div>
                             </mat-tab>
                             <mat-tab class="tab-border" label="Our-Lines">
-                                <div *ngIf="ourlinesPageList != null && ourlinesPageList != undefined">
+                                <div *ngIf="currentTab > -1 && currentTab == 2 && ourlinesPageList != null && ourlinesPageList != undefined">
                                     <div class="record-count-section">
                                         <label>
                                             Search:
                                             <input type="text" (input)="applyFilter('our-lines')"
-                                                [(ngModel)]="searchPageNameQuery" />
+                                                [(ngModel)]="searchOutlinesPageNameQuery" />
                                             <button class="refresh-btn" (click)="onReset('our-lines')"><i
                                                     class="fa fa-refresh refresh-icon-clr"
                                                     aria-hidden="true"></i></button>
@@ -139,7 +138,7 @@
                                         </thead>
                                         <tbody>
                                             <tr
-                                                *ngFor="let mails of ourlinesPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
+                                                *ngFor="let mails of ourlinesPageList  | paginate : { itemsPerPage:50, currentPage:page,totalItems:totalOurlinePages, id:'first' }">
                                                 <td data-title="Subject">{{mails.PageTitle}}</td>
                                                 <td data-title="Subject">{{mails.PageDescription}}</td>
                                                 <td data-title="Subject">{{mails.IsActive}}</td>
@@ -167,12 +166,12 @@
                                 </div>
                             </mat-tab>
                             <mat-tab class="tab-border" label="Servies">
-                                <div *ngIf="servicesPageList != null && servicesPageList != undefined">
+                                <div *ngIf="currentTab > -1 && currentTab == 3 && servicesPageList != null && servicesPageList != undefined">
                                     <div class="record-count-section">
                                         <label>
                                             Search:
                                             <input type="text" (input)="applyFilter('services')"
-                                                [(ngModel)]="searchPageNameQuery" />
+                                                [(ngModel)]="searchServicesPageNameQuery" />
                                             <button class="refresh-btn" (click)="onReset('services')"><i
                                                     class="fa fa-refresh refresh-icon-clr"
                                                     aria-hidden="true"></i></button>
@@ -190,7 +189,7 @@
                                         </thead>
                                         <tbody>
                                             <tr
-                                                *ngFor="let mails of servicesPageList  | paginate : { itemsPerPage:10, currentPage:page,totalItems:totalPage, id:'first' }">
+                                                *ngFor="let mails of servicesPageList  | paginate : { itemsPerPage:50, currentPage:page,totalItems:totalServicesPages, id:'first' }">
                                                 <td data-title="Subject">{{mails.PageTitle}}</td>
                                                 <td data-title="Subject">{{mails.PageDescription}}</td>
                                                 <td data-title="Subject">{{mails.IsActive}}</td>
